kubernetes/api-add-game-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api-add-game
  name: api-add-game
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-add-game
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/app_network: "true"
        io.kompose.service: api-add-game
    spec:
      containers:
      - image: api-add-game
        imagePullPolicy: ""
        name: api-add-game
        ports:
        - containerPort: 8020
        resources: {}
        volumeMounts:
        - mountPath: /API-AG
          name: api-add-game-claim0
        - mountPath: /utils
          name: api-add-game-claim1
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: api-add-game-claim0
        persistentVolumeClaim:
          claimName: api-add-game-claim0
      - name: api-add-game-claim1
        persistentVolumeClaim:
          claimName: api-add-game-claim1
status: {}
