kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/app_network: "true"
        io.kompose.service: app
    spec:
      containers:
      - env:
        - name: API_AP_URL
          value: http://api-add_player:8010/ready
        image: app
        imagePullPolicy: ""
        name: app
        ports:
        - containerPort: 8000
        resources: {}
        volumeMounts:
        - mountPath: /APP/Front_End/static
          name: app-claim0
        - mountPath: /APP/Front_End/templates
          name: app-claim1
        - mountPath: /utils
          name: app-claim2
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: app-claim0
        persistentVolumeClaim:
          claimName: app-claim0
      - name: app-claim1
        persistentVolumeClaim:
          claimName: app-claim1
      - name: app-claim2
        persistentVolumeClaim:
          claimName: app-claim2
status: {}
