kubernetes/backup-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: backup
  name: backup
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backup
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/app_network: "true"
        io.kompose.service: backup
    spec:
      containers:
      - env:
        - name: API_AP_URL
          value: http://api-add_player:8010/ready
        - name: FLASK_APP_URL
          value: http://app:8000/ready
        image: backup
        imagePullPolicy: ""
        name: backup
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /Backup/back_up
          name: backup-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: backup-claim0
        persistentVolumeClaim:
          claimName: backup-claim0
status: {}
