kubernetes/backup-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backup
  namespace: my-app
  labels:
    app: backup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backup
  template:
    metadata:
      labels:
        app: backup
    spec:
      containers:
        - name: backup
          image: <docker_username>/backup:latest
          volumeMounts:
            - name: backup-volume
              mountPath: /Backup
          volumes:
            - name: backup-volume
              hostPath:
                path: /Backup/back_up
