kubernetes/data-base-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: data-base
  name: data-base
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: data-base
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/app_network: "true"
        io.kompose.service: data-base
    spec:
      containers:
      - env:
        - name: DB_DATABASE
          value: Gabo_base
        - name: DB_HOST
          value: data_base
        - name: DB_PASSWORD
          value: Gabo
        - name: DB_USER
          value: root
        image: data-base
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - mysqladmin
            - ping
            - -h
            - localhost
          failureThreshold: 3
          periodSeconds: 10
          timeoutSeconds: 5
        name: data-base-gabo
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d/init.sql
          name: data-base-claim0
        - mountPath: /var/lib/mysql
          name: data-base-tmpfs0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: data-base-claim0
        persistentVolumeClaim:
          claimName: data-base-claim0
      - emptyDir:
          medium: Memory
        name: data-base-tmpfs0
status: {}
