kubernetes/database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: my-app
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: <docker_username>/database:latest
          ports:
            - containerPort: 3306
