kubernetes/api-add-game-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api-add-game
  name: api-add-game
spec:
  ports:
  - name: "8020"
    port: 8020
    targetPort: 8020
  selector:
    io.kompose.service: api-add-game
status:
  loadBalancer: {}
