kubernetes/api-add-player-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api-add-player
  name: api-add-player
spec:
  ports:
  - name: "8010"
    port: 8010
    targetPort: 8010
  selector:
    io.kompose.service: api-add-player
status:
  loadBalancer: {}
