kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: my-app
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
