kubernetes/backup-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backup-service
  namespace: my-app
spec:
  selector:
    app: backup
  ports:
    - protocol: TCP
      port: 8080  # Port exposé pour communiquer avec le backend
      targetPort: 8080  # Port utilisé dans le conteneur 'backup'
  type: ClusterIP  # Service interne au cluster (non accessible de l'extérieur)
